--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![ENIII.jpg]({{site.baseurl}}/assets/images/posts/ENIII.jpg)
 ![TUINNO.jpg]({{site.baseurl}}/assets/images/posts/TUINNO.jpg)
 ![FOREVER.jpg]({{site.baseurl}}/assets/images/posts/FOREVER.jpg)
 ![hhffd.jpg]({{site.baseurl}}/assets/images/posts/hhffd.jpg)
