--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ÄR-JAG.jpg]({{site.baseurl}}/assets/images/posts/ÄR-JAG.jpg)
 ![mindgames.jpg]({{site.baseurl}}/assets/images/posts/mindgames.jpg)
 ![SOUL.jpg]({{site.baseurl}}/assets/images/posts/SOUL.jpg)
 ![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
