--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ASTRU.jpg]({{site.baseurl}}/assets/images/posts/ASTRU.jpg)
+![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
 ![ÄR-JAG.jpg]({{site.baseurl}}/assets/images/posts/ÄR-JAG.jpg)
 ![mindgames.jpg]({{site.baseurl}}/assets/images/posts/mindgames.jpg)
 ![SOUL.jpg]({{site.baseurl}}/assets/images/posts/SOUL.jpg)
@@ -11,5 +13,4 @@ feature: ISSIGT.jpg
 ![BACK.jpg]({{site.baseurl}}/assets/images/posts/BACK.jpg)
 ![FORVER.jpg]({{site.baseurl}}/assets/images/posts/FORVER.jpg)
 ![ÅR.jpg]({{site.baseurl}}/assets/images/posts/ÅR.jpg)
-![NEW MOON.jpg]({{site.baseurl}}/assets/images/posts/NEW MOON.jpg)
-![SYMMM.jpg]({{site.baseurl}}/assets/images/posts/SYMMM.jpg)
+
