--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![DATUM.jpg]({{site.baseurl}}/assets/images/posts/DATUM.jpg)
 ![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
 ![ÄR-JAG.jpg]({{site.baseurl}}/assets/images/posts/ÄR-JAG.jpg)
 ![mindgames.jpg]({{site.baseurl}}/assets/images/posts/mindgames.jpg)
