--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -35,3 +35,5 @@ feature: tsunami.jpg
 ![larven.jpg]({{site.baseurl}}/assets/images/posts/larven.jpg)
 ![white.jpg]({{site.baseurl}}/assets/images/posts/white.jpg)
 ![fosh.jpg]({{site.baseurl}}/assets/images/posts/fosh.jpg)
+![GOOM.jpg]({{site.baseurl}}/assets/images/posts/GOOM.jpg)
+
