--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![desolation.jpg]({{site.baseurl}}/assets/images/posts/desolation.jpg)
 ![zom.jpg]({{site.baseurl}}/assets/images/posts/zom.jpg)
 ![DATUM.jpg]({{site.baseurl}}/assets/images/posts/DATUM.jpg)
 ![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
