--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,11 +4,10 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![anx.jpg]({{site.baseurl}}/assets/images/posts/anx.jpg)
 ![SKILLNAD.jpg]({{site.baseurl}}/assets/images/posts/SKILLNAD.jpg)
 ![desolation.jpg]({{site.baseurl}}/assets/images/posts/desolation.jpg)
 ![zom.jpg]({{site.baseurl}}/assets/images/posts/zom.jpg)
 ![DATUM.jpg]({{site.baseurl}}/assets/images/posts/DATUM.jpg)
 ![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
-![mindgames.jpg]({{site.baseurl}}/assets/images/posts/mindgames.jpg)
-![SOUL.jpg]({{site.baseurl}}/assets/images/posts/SOUL.jpg)
 ![ÅR.jpg]({{site.baseurl}}/assets/images/posts/ÅR.jpg)
