--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![xccx.jpg]({{site.baseurl}}/assets/images/posts/xccx.jpg)
 ![anx.jpg]({{site.baseurl}}/assets/images/posts/anx.jpg)
 ![SKILLNAD.jpg]({{site.baseurl}}/assets/images/posts/SKILLNAD.jpg)
 ![desolation.jpg]({{site.baseurl}}/assets/images/posts/desolation.jpg)
