--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![ddd.jpg]({{site.baseurl}}/assets/images/posts/ddd.jpg)
 ![SKILL.jpg]({{site.baseurl}}/assets/images/posts/SKILL.jpg)
 ![mmmind.jpg]({{site.baseurl}}/assets/images/posts/mmmind.jpg)
 ![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
