--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -5,6 +5,7 @@ title: new pic
 feature: ISSIGT.jpg
 ---
 ![QUITE.jpg]({{site.baseurl}}/assets/images/posts/QUITE.jpg)
+![FUNK.jpg]({{site.baseurl}}/assets/images/posts/FUNK.jpg)
 ![anx.jpg]({{site.baseurl}}/assets/images/posts/anx.jpg)
 ![SKILLNAD.jpg]({{site.baseurl}}/assets/images/posts/SKILLNAD.jpg)
 ![desolation.jpg]({{site.baseurl}}/assets/images/posts/desolation.jpg)
