--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![FUN.jpg]({{site.baseurl}}/assets/images/posts/FUN.jpg)
 ![ENIII.jpg]({{site.baseurl}}/assets/images/posts/ENIII.jpg)
 ![TUINNO.jpg]({{site.baseurl}}/assets/images/posts/TUINNO.jpg)
 ![FOREVER.jpg]({{site.baseurl}}/assets/images/posts/FOREVER.jpg)
@@ -36,4 +37,3 @@ feature: tsunami.jpg
 ![white.jpg]({{site.baseurl}}/assets/images/posts/white.jpg)
 ![fosh.jpg]({{site.baseurl}}/assets/images/posts/fosh.jpg)
 ![GOOM.jpg]({{site.baseurl}}/assets/images/posts/GOOM.jpg)
-
