--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![co.jpg]({{site.baseurl}}/assets/images/posts/co.jpg)
 ![QUITE.jpg]({{site.baseurl}}/assets/images/posts/QUITE.jpg)
 ![FUNK.jpg]({{site.baseurl}}/assets/images/posts/FUNK.jpg)
 ![anx.jpg]({{site.baseurl}}/assets/images/posts/anx.jpg)
