--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![COME-ON.jpg]({{site.baseurl}}/assets/images/posts/COME-ON.jpg)
 ![LET-GO.jpg]({{site.baseurl}}/assets/images/posts/LET-GO.jpg)
 ![maxresdefault-(2).jpg]({{site.baseurl}}/assets/images/posts/maxresdefault-(2).jpg)
 ![co.jpg]({{site.baseurl}}/assets/images/posts/co.jpg)
