--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![MÄRKER.jpg]({{site.baseurl}}/assets/images/posts/MÄRKER.jpg)
 ![sharp.jpg]({{site.baseurl}}/assets/images/posts/sharp.jpg)
 ![FUN.jpg]({{site.baseurl}}/assets/images/posts/FUN.jpg)
 ![ENIII.jpg]({{site.baseurl}}/assets/images/posts/ENIII.jpg)
