--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![i.jpg]({{site.baseurl}}/assets/images/posts/i.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
 ![COME-ON.jpg]({{site.baseurl}}/assets/images/posts/COME-ON.jpg)
 ![LET-GO.jpg]({{site.baseurl}}/assets/images/posts/LET-GO.jpg)
