--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![COME-ON.jpg]({{site.baseurl}}/assets/images/posts/COME-ON.jpg)
 ![ASTRA.jpg]({{site.baseurl}}/assets/images/posts/ASTRA.jpg)
 ![DATUM.jpg]({{site.baseurl}}/assets/images/posts/DATUM.jpg)
 ![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
