--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![capture.jpg]({{site.baseurl}}/assets/images/posts/capture.jpg)
 ![merb.jpg]({{site.baseurl}}/assets/images/posts/merb.jpg)
 ![i.jpg]({{site.baseurl}}/assets/images/posts/i.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
