--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,10 +4,10 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![BRIDGE.jpg]({{site.baseurl}}/assets/images/posts/BRIDGE.jpg)
 ![capture.jpg]({{site.baseurl}}/assets/images/posts/capture.jpg)
 ![merb.jpg]({{site.baseurl}}/assets/images/posts/merb.jpg)
 ![i.jpg]({{site.baseurl}}/assets/images/posts/i.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
-
 ![maxresdefault-(2).jpg]({{site.baseurl}}/assets/images/posts/maxresdefault-(2).jpg)
 ![co.jpg]({{site.baseurl}}/assets/images/posts/co.jpg)
