--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
 ![did i.jpg]({{site.baseurl}}/assets/images/posts/did i.jpg)
 ![Q.jpg]({{site.baseurl}}/assets/images/posts/Q.jpg)
 ![ddd.jpg]({{site.baseurl}}/assets/images/posts/ddd.jpg)
