--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![it.jpg]({{site.baseurl}}/assets/images/posts/it.jpg)
 ![aries.jpg]({{site.baseurl}}/assets/images/posts/aries.jpg)
 ![BRIDGE.jpg]({{site.baseurl}}/assets/images/posts/BRIDGE.jpg)
 ![capture.jpg]({{site.baseurl}}/assets/images/posts/capture.jpg)
