--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![cyklon.jpg]({{site.baseurl}}/assets/images/posts/cyklon.jpg)
 ![mer-bubb.jpg]({{site.baseurl}}/assets/images/posts/mer-bubb.jpg)
 ![MÄRKER.jpg]({{site.baseurl}}/assets/images/posts/MÄRKER.jpg)
 ![sharp.jpg]({{site.baseurl}}/assets/images/posts/sharp.jpg)
