--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -4,6 +4,7 @@ published: true
 title: fidelis ad mortem
 feature: calle.jpg
 ---
+![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
