--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,10 +4,10 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![vinter12-028.jpg]({{site.baseurl}}/assets/images/posts/vinter12-028.jpg)
 ![Dock.jpg]({{site.baseurl}}/assets/images/posts/Dock.jpg)
 ![clouds_1920.jpg]({{site.baseurl}}/assets/images/posts/clouds_1920.jpg)
 ![notttt.jpg]({{site.baseurl}}/assets/images/posts/notttt.jpg)
 ![storm.jpg]({{site.baseurl}}/assets/images/posts/storm.jpg)
 ![it.jpg]({{site.baseurl}}/assets/images/posts/it.jpg)
 ![aries.jpg]({{site.baseurl}}/assets/images/posts/aries.jpg)
-![BRIDGE.jpg]({{site.baseurl}}/assets/images/posts/BRIDGE.jpg)
