--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
 ![vinter12-028.jpg]({{site.baseurl}}/assets/images/posts/vinter12-028.jpg)
 ![Dock.jpg]({{site.baseurl}}/assets/images/posts/Dock.jpg)
 ![clouds_1920.jpg]({{site.baseurl}}/assets/images/posts/clouds_1920.jpg)
