--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![DO.jpg]({{site.baseurl}}/assets/images/posts/DO.jpg)
 ![clo.jpg]({{site.baseurl}}/assets/images/posts/clo.jpg)
