--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,10 +4,11 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
 ![vinter12-028.jpg]({{site.baseurl}}/assets/images/posts/vinter12-028.jpg)
 ![clouds_1920.jpg]({{site.baseurl}}/assets/images/posts/clouds_1920.jpg)
 ![notttt.jpg]({{site.baseurl}}/assets/images/posts/notttt.jpg)
 ![it.jpg]({{site.baseurl}}/assets/images/posts/it.jpg)
-![aries.jpg]({{site.baseurl}}/assets/images/posts/aries.jpg)
+
