--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ANGER.jpg]({{site.baseurl}}/assets/images/posts/ANGER.jpg)
 ![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
@@ -11,4 +12,3 @@ feature: ISSIGT.jpg
 ![clouds_1920.jpg]({{site.baseurl}}/assets/images/posts/clouds_1920.jpg)
 ![notttt.jpg]({{site.baseurl}}/assets/images/posts/notttt.jpg)
 ![it.jpg]({{site.baseurl}}/assets/images/posts/it.jpg)
-
