--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-![ANGER.jpg]({{site.baseurl}}/assets/images/posts/ANGER.jpg)
+![WHAT.jpg]({{site.baseurl}}/assets/images/posts/WHAT.jpg)
 ![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
