--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,7 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
-![ANG.jpg]({{site.baseurl}}/assets/images/posts/ANG.jpg)
+![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![KALI.jpg]({{site.baseurl}}/assets/images/posts/KALI.jpg)
 ![COME-ON.jpg]({{site.baseurl}}/assets/images/posts/COME-ON.jpg)
 ![ASTRA.jpg]({{site.baseurl}}/assets/images/posts/ASTRA.jpg)
