--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![TALK.jpg]({{site.baseurl}}/assets/images/posts/TALK.jpg)
 ![WHAT.jpg]({{site.baseurl}}/assets/images/posts/WHAT.jpg)
 ![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
