--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![TA.jpg]({{site.baseurl}}/assets/images/posts/TA.jpg)
 ![apar.jpg]({{site.baseurl}}/assets/images/posts/apar.jpg)
 ![break.jpg]({{site.baseurl}}/assets/images/posts/break.jpg)
 ![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
