--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -6,6 +6,7 @@ feature: ISSIGT.jpg
 ---
 ![TALK.jpg]({{site.baseurl}}/assets/images/posts/TALK.jpg)
 ![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
+![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
 ![clouds_1920.jpg]({{site.baseurl}}/assets/images/posts/clouds_1920.jpg)
