--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: FIONAS
 feature: WE CAN.jpg
 ---
+![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
 ![kicks-in.jpg]({{site.baseurl}}/assets/images/posts/kicks-in.jpg)
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
