--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![30.jpg]({{site.baseurl}}/assets/images/posts/30.jpg)
 ![go (2).jpg]({{site.baseurl}}/assets/images/posts/go (2).jpg)
 ![aj.jpg]({{site.baseurl}}/assets/images/posts/aj.jpg)
 ![kicks-in.jpg]({{site.baseurl}}/assets/images/posts/kicks-in.jpg)
