--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,8 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![do.jpg]({{site.baseurl}}/assets/images/posts/do.jpg)
+![turner-nap.jpg]({{site.baseurl}}/assets/images/posts/turner-nap.jpg)
 ![break.jpg]({{site.baseurl}}/assets/images/posts/break.jpg)
 ![30.jpg]({{site.baseurl}}/assets/images/posts/30.jpg)
 ![go (2).jpg]({{site.baseurl}}/assets/images/posts/go (2).jpg)
