--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![lila.jpg]({{site.baseurl}}/assets/images/posts/lila.jpg)
 ![kan.jpg]({{site.baseurl}}/assets/images/posts/kan.jpg)
 ![TALK.jpg]({{site.baseurl}}/assets/images/posts/TALK.jpg)
 ![fall-a.jpg]({{site.baseurl}}/assets/images/posts/fall-a.jpg)
