--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![lot.jpg]({{site.baseurl}}/assets/images/posts/lot.jpg)
 ![tran.jpg]({{site.baseurl}}/assets/images/posts/tran.jpg)
 ![svårt.jpg]({{site.baseurl}}/assets/images/posts/svårt.jpg)
 ![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
