--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,11 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
+![ISSIGT (2).jpg]({{site.baseurl}}/assets/images/posts/ISSIGT (2).jpg)
+![KATAS.jpg]({{site.baseurl}}/assets/images/posts/KATAS.jpg)
+
+![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
 ![lot.jpg]({{site.baseurl}}/assets/images/posts/lot.jpg)
 ![tran.jpg]({{site.baseurl}}/assets/images/posts/tran.jpg)
 ![svårt.jpg]({{site.baseurl}}/assets/images/posts/svårt.jpg)
