--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -14,7 +14,7 @@ feature: tsunami.jpg
 ![sharp.jpg]({{site.baseurl}}/assets/images/posts/sharp.jpg)
 ![ENIII.jpg]({{site.baseurl}}/assets/images/posts/ENIII.jpg)
 ![TUINNO.jpg]({{site.baseurl}}/assets/images/posts/TUINNO.jpg)
-![hhffd.jpg]({{site.baseurl}}/assets/images/posts/hhffd.jpg)
+![opera.jpg]({{site.baseurl}}/assets/images/posts/opera.jpg)
 ![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
