--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,9 +4,9 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![feaaaar.jpg]({{site.baseurl}}/assets/images/posts/feaaaar.jpg)
 ![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![mooon.jpg]({{site.baseurl}}/assets/images/posts/mooon.jpg)
 ![IMBAL.jpg]({{site.baseurl}}/assets/images/posts/IMBAL.jpg)
-![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![MATT.jpg]({{site.baseurl}}/assets/images/posts/MATT.jpg)
