--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,9 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![bo9ss.jpg]({{site.baseurl}}/assets/images/posts/bo9ss.jpg)
+![sick.jpg]({{site.baseurl}}/assets/images/posts/sick.jpg)
+![bosses.jpg]({{site.baseurl}}/assets/images/posts/bosses.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
 ![trunp.jpg]({{site.baseurl}}/assets/images/posts/trunp.jpg)
 ![003.jpg]({{site.baseurl}}/assets/images/posts/003.jpg)
