--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![happen.jpg]({{site.baseurl}}/assets/images/posts/happen.jpg)
 ![feaaaar.jpg]({{site.baseurl}}/assets/images/posts/feaaaar.jpg)
 ![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![mooon.jpg]({{site.baseurl}}/assets/images/posts/mooon.jpg)
