--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![HA.jpg]({{site.baseurl}}/assets/images/posts/HA.jpg)
 ![chew.jpg]({{site.baseurl}}/assets/images/posts/chew.jpg)
 ![llillith.jpg]({{site.baseurl}}/assets/images/posts/llillith.jpg)
 ![TA.jpg]({{site.baseurl}}/assets/images/posts/TA.jpg)
