--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,9 +4,9 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![reap.jpg]({{site.baseurl}}/assets/images/posts/reap.jpg)
 ![VALLEY.jpg]({{site.baseurl}}/assets/images/posts/VALLEY.jpg)
 ![happen.jpg]({{site.baseurl}}/assets/images/posts/happen.jpg)
 ![feaaaar.jpg]({{site.baseurl}}/assets/images/posts/feaaaar.jpg)
 ![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![mooon.jpg]({{site.baseurl}}/assets/images/posts/mooon.jpg)
-![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
