--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![reeeee.jpg]({{site.baseurl}}/assets/images/posts/reeeee.jpg)
 ![mon.jpg]({{site.baseurl}}/assets/images/posts/mon.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
 ![KALI.jpg]({{site.baseurl}}/assets/images/posts/KALI.jpg)
