--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![Y.jpg]({{site.baseurl}}/assets/images/posts/Y.jpg)
 ![reap.jpg]({{site.baseurl}}/assets/images/posts/reap.jpg)
 ![VALLEY.jpg]({{site.baseurl}}/assets/images/posts/VALLEY.jpg)
 ![happen.jpg]({{site.baseurl}}/assets/images/posts/happen.jpg)
