--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
 ![sss.jpg]({{site.baseurl}}/assets/images/posts/sss.jpg)
 ![FLOW.jpg]({{site.baseurl}}/assets/images/posts/FLOW.jpg)
 ![DA.jpg]({{site.baseurl}}/assets/images/posts/DA.jpg)
