--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![reeeee.jpg]({{site.baseurl}}/assets/images/posts/reeeee.jpg)
 ![mon.jpg]({{site.baseurl}}/assets/images/posts/mon.jpg)
