--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![gmälol.jpg]({{site.baseurl}}/assets/images/posts/gmälol.jpg)
 ![ÄÄÄPP.jpg]({{site.baseurl}}/assets/images/posts/ÄÄÄPP.jpg)
 ![TU.jpg]({{site.baseurl}}/assets/images/posts/TU.jpg)
 ![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
