--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,8 +4,9 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![lila.jpg]({{site.baseurl}}/assets/images/posts/lila.jpg)
 ![gmälol.jpg]({{site.baseurl}}/assets/images/posts/gmälol.jpg)
 ![ÄÄÄPP.jpg]({{site.baseurl}}/assets/images/posts/ÄÄÄPP.jpg)
 ![TU.jpg]({{site.baseurl}}/assets/images/posts/TU.jpg)
 ![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
-![FLOW.jpg]({{site.baseurl}}/assets/images/posts/FLOW.jpg)
+
