--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -28,3 +28,5 @@ feature: tsunami.jpg
 ![grabb.jpg]({{site.baseurl}}/assets/images/posts/grabb.jpg)
 ![ök1.jpg]({{site.baseurl}}/assets/images/posts/ök1.jpg)
 ![GOOM.jpg]({{site.baseurl}}/assets/images/posts/GOOM.jpg)
+![lila.jpg]({{site.baseurl}}/assets/images/posts/lila.jpg)
+
