--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -6,6 +6,7 @@ feature: 1234.jpg
 ---
 ![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
+![staaaay.jpg]({{site.baseurl}}/assets/images/posts/staaaay.jpg)
 ![reeeee.jpg]({{site.baseurl}}/assets/images/posts/reeeee.jpg)
 ![mon.jpg]({{site.baseurl}}/assets/images/posts/mon.jpg)
 ![NEVER.jpg]({{site.baseurl}}/assets/images/posts/NEVER.jpg)
