--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![påskfjädrar.jpg]({{site.baseurl}}/assets/images/posts/påskfjädrar.jpg)
 ![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
 ![BFXCD.jpg]({{site.baseurl}}/assets/images/posts/BFXCD.jpg)
 ![m.jpg]({{site.baseurl}}/assets/images/posts/m.jpg)
