--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![äp.jpg]({{site.baseurl}}/assets/images/posts/äp.jpg)
 ![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
 ![HA.jpg]({{site.baseurl}}/assets/images/posts/HA.jpg)
 ![chew.jpg]({{site.baseurl}}/assets/images/posts/chew.jpg)
