--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![äp.jpg]({{site.baseurl}}/assets/images/posts/äp.jpg)
+![pang.jpg]({{site.baseurl}}/assets/images/posts/pang.jpg)
 ![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
 ![HA.jpg]({{site.baseurl}}/assets/images/posts/HA.jpg)
 ![chew.jpg]({{site.baseurl}}/assets/images/posts/chew.jpg)
