--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![öken.jpg]({{site.baseurl}}/assets/images/posts/öken.jpg)
 ![kan.jpg]({{site.baseurl}}/assets/images/posts/kan.jpg)
 ![håll.jpg]({{site.baseurl}}/assets/images/posts/håll.jpg)
 ![sss.jpg]({{site.baseurl}}/assets/images/posts/sss.jpg)
