--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![LET.jpg]({{site.baseurl}}/assets/images/posts/LET.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
 ![staaaay.jpg]({{site.baseurl}}/assets/images/posts/staaaay.jpg)
