--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,8 +4,9 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![turn.jpg]({{site.baseurl}}/assets/images/posts/turn.jpg)
 ![is.jpg]({{site.baseurl}}/assets/images/posts/is.jpg)
 ![ASTYRA.jpg]({{site.baseurl}}/assets/images/posts/ASTYRA.jpg)
 ![påskfjädrar.jpg]({{site.baseurl}}/assets/images/posts/påskfjädrar.jpg)
 ![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
-![BFXCD.jpg]({{site.baseurl}}/assets/images/posts/BFXCD.jpg)
+
