--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -18,6 +18,7 @@ feature: 1234.jpg
 ![FEB.jpg]({{site.baseurl}}/assets/images/posts/FEB.jpg)
 ![DAY.jpg]({{site.baseurl}}/assets/images/posts/DAY.jpg)
 ![skåp.jpg]({{site.baseurl}}/assets/images/posts/skåp.jpg)
+![lila-(3).jpg]({{site.baseurl}}/assets/images/posts/lila-(3).jpg)
 ![ENERGI.jpg]({{site.baseurl}}/assets/images/posts/ENERGI.jpg)
 ![root-tree.jpg]({{site.baseurl}}/assets/images/posts/root-tree.jpg)
 ![feb.jpg]({{site.baseurl}}/assets/images/posts/feb.jpg)
