--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,9 +4,9 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![TIME.jpg]({{site.baseurl}}/assets/images/posts/TIME.jpg)
 ![man.jpg]({{site.baseurl}}/assets/images/posts/man.jpg)
 ![turn.jpg]({{site.baseurl}}/assets/images/posts/turn.jpg)
 ![is.jpg]({{site.baseurl}}/assets/images/posts/is.jpg)
 ![ASTYRA.jpg]({{site.baseurl}}/assets/images/posts/ASTYRA.jpg)
 ![påskfjädrar.jpg]({{site.baseurl}}/assets/images/posts/påskfjädrar.jpg)
-![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
