--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -28,3 +28,5 @@ feature: tsunami.jpg
 ![grabb.jpg]({{site.baseurl}}/assets/images/posts/grabb.jpg)
 ![GOOM.jpg]({{site.baseurl}}/assets/images/posts/GOOM.jpg)
 ![lila.jpg]({{site.baseurl}}/assets/images/posts/lila.jpg)
+![GATE.jpg]({{site.baseurl}}/assets/images/posts/GATE.jpg)
+
