--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -4,6 +4,7 @@ published: true
 title: fidelis ad mortem
 feature: calle.jpg
 ---
+![pnoj.jpg]({{site.baseurl}}/assets/images/posts/pnoj.jpg)
 ![JES.jpg]({{site.baseurl}}/assets/images/posts/JES.jpg)
 ![drake.jpg]({{site.baseurl}}/assets/images/posts/drake.jpg)
 ![tvåtusen.jpg]({{site.baseurl}}/assets/images/posts/tvåtusen.jpg)
