--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![TIME.jpg]({{site.baseurl}}/assets/images/posts/TIME.jpg)
 ![turn.jpg]({{site.baseurl}}/assets/images/posts/turn.jpg)
 ![ASTYRA.jpg]({{site.baseurl}}/assets/images/posts/ASTYRA.jpg)
