--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -5,6 +5,7 @@ title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
 ![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
+![digital_art_texture_256_by_mercurycode-d8f6u6n (2).jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_256_by_mercurycode-d8f6u6n (2).jpg)
 ![valley.jpg]({{site.baseurl}}/assets/images/posts/valley.jpg)
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
 ![öken.jpg]({{site.baseurl}}/assets/images/posts/öken.jpg)
