--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![STREAM.jpg]({{site.baseurl}}/assets/images/posts/STREAM.jpg)
 ![äp.jpg]({{site.baseurl}}/assets/images/posts/äp.jpg)
 ![pang.jpg]({{site.baseurl}}/assets/images/posts/pang.jpg)
 ![HA.jpg]({{site.baseurl}}/assets/images/posts/HA.jpg)
