--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -7,6 +7,7 @@ feature: tsunami.jpg
 ![FISH.jpg]({{site.baseurl}}/assets/images/posts/FISH.jpg)
 ![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
+![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![clo.jpg]({{site.baseurl}}/assets/images/posts/clo.jpg)
 ![guilt.jpg]({{site.baseurl}}/assets/images/posts/guilt.jpg)
 ![cyklon.jpg]({{site.baseurl}}/assets/images/posts/cyklon.jpg)
