--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![trap.jpg]({{site.baseurl}}/assets/images/posts/trap.jpg)
 ![BL.jpg]({{site.baseurl}}/assets/images/posts/BL.jpg)
 ![ev.jpg]({{site.baseurl}}/assets/images/posts/ev.jpg)
 ![TIME.jpg]({{site.baseurl}}/assets/images/posts/TIME.jpg)
