--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -10,6 +10,7 @@ feature: WE CAN.jpg
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
 ![öken.jpg]({{site.baseurl}}/assets/images/posts/öken.jpg)
 ![kan.jpg]({{site.baseurl}}/assets/images/posts/kan.jpg)
+![waaar.jpg]({{site.baseurl}}/assets/images/posts/waaar.jpg)
 ![håll.jpg]({{site.baseurl}}/assets/images/posts/håll.jpg)
 ![sss.jpg]({{site.baseurl}}/assets/images/posts/sss.jpg)
 ![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
