--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![gr.jpg]({{site.baseurl}}/assets/images/posts/gr.jpg)
 ![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
 ![sex.jpg]({{site.baseurl}}/assets/images/posts/sex.jpg)
 ![valley.jpg]({{site.baseurl}}/assets/images/posts/valley.jpg)
