--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,6 +4,7 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
+![cyklon.jpg]({{site.baseurl}}/assets/images/posts/cyklon.jpg)
 ![ny.jpg]({{site.baseurl}}/assets/images/posts/ny.jpg)
 ![gr.jpg]({{site.baseurl}}/assets/images/posts/gr.jpg)
 ![shut.jpg]({{site.baseurl}}/assets/images/posts/shut.jpg)
