--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
 ![trap.jpg]({{site.baseurl}}/assets/images/posts/trap.jpg)
 ![BL.jpg]({{site.baseurl}}/assets/images/posts/BL.jpg)
 ![ev.jpg]({{site.baseurl}}/assets/images/posts/ev.jpg)
-![ASTYRA.jpg]({{site.baseurl}}/assets/images/posts/ASTYRA.jpg)
