--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![NUHÄ.jpg]({{site.baseurl}}/assets/images/posts/NUHÄ.jpg)
 ![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
 ![trap.jpg]({{site.baseurl}}/assets/images/posts/trap.jpg)
 ![BL.jpg]({{site.baseurl}}/assets/images/posts/BL.jpg)
