--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,7 @@ feature: GODMORNING.jpg
 ---
 ![MAD.jpg]({{site.baseurl}}/assets/images/posts/MAD.jpg)
 ![äp.jpg]({{site.baseurl}}/assets/images/posts/äp.jpg)
+![GÖRA FEL.jpg]({{site.baseurl}}/assets/images/posts/GÖRA FEL.jpg)
 ![pang.jpg]({{site.baseurl}}/assets/images/posts/pang.jpg)
 ![chew.jpg]({{site.baseurl}}/assets/images/posts/chew.jpg)
 ![TA.jpg]({{site.baseurl}}/assets/images/posts/TA.jpg)
