--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
 ![ggg.jpg]({{site.baseurl}}/assets/images/posts/ggg.jpg)
