--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -8,6 +8,7 @@ feature: tsunami.jpg
 ![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
+![hors.jpg]({{site.baseurl}}/assets/images/posts/hors.jpg)
 ![clo.jpg]({{site.baseurl}}/assets/images/posts/clo.jpg)
 ![guilt.jpg]({{site.baseurl}}/assets/images/posts/guilt.jpg)
 ![mer-bubb.jpg]({{site.baseurl}}/assets/images/posts/mer-bubb.jpg)
