--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,8 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![DISS.jpg]({{site.baseurl}}/assets/images/posts/DISS.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
 ![dd.jpg]({{site.baseurl}}/assets/images/posts/dd.jpg)
-![ASTRO.jpg]({{site.baseurl}}/assets/images/posts/ASTRO.jpg)
