--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,9 +4,9 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![LET.jpg]({{site.baseurl}}/assets/images/posts/LET.jpg)
-![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
 ![MOOOOON.jpg]({{site.baseurl}}/assets/images/posts/MOOOOON.jpg)
 ![staaaay.jpg]({{site.baseurl}}/assets/images/posts/staaaay.jpg)
 ![reeeee.jpg]({{site.baseurl}}/assets/images/posts/reeeee.jpg)
