--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![DISS.jpg]({{site.baseurl}}/assets/images/posts/DISS.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
