--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: new pic
+title: floskler och grodor
 feature: ISSIGT.jpg
 ---
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
