--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,3 +4,7 @@ published: true
 title: new
 ---
 ![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
+![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
+![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
+![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
+
