--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -17,6 +17,7 @@ feature: tsunami.jpg
 ![TUINNO.jpg]({{site.baseurl}}/assets/images/posts/TUINNO.jpg)
 ![opera.jpg]({{site.baseurl}}/assets/images/posts/opera.jpg)
 ![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
+![dd.jpg]({{site.baseurl}}/assets/images/posts/dd.jpg)
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
