--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,4 +4,6 @@ published: true
 title: floskler och grodor
 feature: ISSIGT.jpg
 ---
+![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
+![bit off.jpg]({{site.baseurl}}/assets/images/posts/bit off.jpg)
 
