--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: floskler och grodor
 feature: ISSIGT.jpg
 ---
+![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![bit off.jpg]({{site.baseurl}}/assets/images/posts/bit off.jpg)
-
