--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -8,3 +8,8 @@ feature: ISSIGT.jpg
 ![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
 ![bit off.jpg]({{site.baseurl}}/assets/images/posts/bit off.jpg)
+![do (3).jpg]({{site.baseurl}}/assets/images/posts/do (3).jpg)
+![ka.jpg]({{site.baseurl}}/assets/images/posts/ka.jpg)
+![dont.jpg]({{site.baseurl}}/assets/images/posts/dont.jpg)
+![OBBSSS.jpg]({{site.baseurl}}/assets/images/posts/OBBSSS.jpg)
+
