--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -12,4 +12,5 @@ feature: ISSIGT.jpg
 ![ka.jpg]({{site.baseurl}}/assets/images/posts/ka.jpg)
 ![dont.jpg]({{site.baseurl}}/assets/images/posts/dont.jpg)
 ![OBBSSS.jpg]({{site.baseurl}}/assets/images/posts/OBBSSS.jpg)
+![turner-nap (2).jpg]({{site.baseurl}}/assets/images/posts/turner-nap (2).jpg)
 
