--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -13,4 +13,7 @@ feature: ISSIGT.jpg
 ![dont.jpg]({{site.baseurl}}/assets/images/posts/dont.jpg)
 ![OBBSSS.jpg]({{site.baseurl}}/assets/images/posts/OBBSSS.jpg)
 ![turner-nap (2).jpg]({{site.baseurl}}/assets/images/posts/turner-nap (2).jpg)
+![contribute.jpg]({{site.baseurl}}/assets/images/posts/contribute.jpg)
+![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
+
 
