--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -15,5 +15,6 @@ feature: ISSIGT.jpg
 ![turner-nap (2).jpg]({{site.baseurl}}/assets/images/posts/turner-nap (2).jpg)
 ![contribute.jpg]({{site.baseurl}}/assets/images/posts/contribute.jpg)
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
+![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
 
 
