--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -16,3 +16,5 @@ feature: ISSIGT.jpg
 ![contribute.jpg]({{site.baseurl}}/assets/images/posts/contribute.jpg)
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
 ![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
+![grodd.jpg]({{site.baseurl}}/assets/images/posts/grodd.jpg)
+
