--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -2,9 +2,9 @@
 layout: post
 published: true
 title: new
+feature: vtt.jpg
 ---
 ![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
 ![mat.jpg]({{site.baseurl}}/assets/images/posts/mat.jpg)
-
