--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: floskler och grodor
+title: quates
 feature: ISSIGT.jpg
 ---
 ![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
@@ -17,4 +17,3 @@ feature: ISSIGT.jpg
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
 ![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
 ![grodd.jpg]({{site.baseurl}}/assets/images/posts/grodd.jpg)
-
