--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -3,3 +3,6 @@ layout: post
 published: true
 title: mix-pics
 ---
+![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
+![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
+
