--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -5,4 +5,9 @@ title: mix-pics
 ---
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
+![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
+![eld.jpg]({{site.baseurl}}/assets/images/posts/eld.jpg)
+![brown.jpg]({{site.baseurl}}/assets/images/posts/brown.jpg)
+![HF.jpg]({{site.baseurl}}/assets/images/posts/HF.jpg)
+
 
