--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -3,6 +3,7 @@ layout: post
 published: true
 title: mix-pics
 ---
+![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
