--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -23,6 +23,8 @@ title: mix-pics
 ![SAD.jpg]({{site.baseurl}}/assets/images/posts/SAD.jpg)
 ![SYMMM.jpg]({{site.baseurl}}/assets/images/posts/SYMMM.jpg)
 ![this.jpg]({{site.baseurl}}/assets/images/posts/this.jpg)
+![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
+
 
 
 
