--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: quates
 feature: ISSIGT.jpg
 ---
+![apar.jpg]({{site.baseurl}}/assets/images/posts/apar.jpg)
 ![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
 ![HATE.jpg]({{site.baseurl}}/assets/images/posts/HATE.jpg)
@@ -17,3 +18,20 @@ feature: ISSIGT.jpg
 ![xxx.jpg]({{site.baseurl}}/assets/images/posts/xxx.jpg)
 ![VAL.jpg]({{site.baseurl}}/assets/images/posts/VAL.jpg)
 ![grodd.jpg]({{site.baseurl}}/assets/images/posts/grodd.jpg)
+![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
+![back.jpg]({{site.baseurl}}/assets/images/posts/back.jpg)
+![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
+![bl.jpg]({{site.baseurl}}/assets/images/posts/bl.jpg)
+![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
+![cyklon.jpg]({{site.baseurl}}/assets/images/posts/cyklon.jpg)
+![dang.jpg]({{site.baseurl}}/assets/images/posts/dang.jpg)
+![dollll.jpg]({{site.baseurl}}/assets/images/posts/dollll.jpg)
+![druv-Recovered.jpg]({{site.baseurl}}/assets/images/posts/druv-Recovered.jpg)
+![elephant (2).jpg]({{site.baseurl}}/assets/images/posts/elephant (2).jpg)
+![EVERYTHING (2).jpg]({{site.baseurl}}/assets/images/posts/EVERYTHING (2).jpg)
+![fy.jpg]({{site.baseurl}}/assets/images/posts/fy.jpg)
+![hot (2).jpg]({{site.baseurl}}/assets/images/posts/hot (2).jpg)
+![h-silentspend-aspirations.jpg]({{site.baseurl}}/assets/images/posts/h-silentspend-aspirations.jpg)
+![hutd.jpg]({{site.baseurl}}/assets/images/posts/hutd.jpg)
+![kang.jpg]({{site.baseurl}}/assets/images/posts/kang.jpg)
+
