--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -34,4 +34,10 @@ feature: ISSIGT.jpg
 ![h-silentspend-aspirations.jpg]({{site.baseurl}}/assets/images/posts/h-silentspend-aspirations.jpg)
 ![hutd.jpg]({{site.baseurl}}/assets/images/posts/hutd.jpg)
 ![kang.jpg]({{site.baseurl}}/assets/images/posts/kang.jpg)
+![never (2).jpg]({{site.baseurl}}/assets/images/posts/never (2).jpg)
+![remember (2).jpg]({{site.baseurl}}/assets/images/posts/remember (2).jpg)
+![sick.jpg]({{site.baseurl}}/assets/images/posts/sick.jpg)
+![red (2).jpg]({{site.baseurl}}/assets/images/posts/red (2).jpg)
+![tupppp.jpg]({{site.baseurl}}/assets/images/posts/tupppp.jpg)
+
 
