--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -6,6 +6,9 @@ feature: TRIX.jpg
 ---
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
+![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
+![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+![ALLWAYS.jpg]({{site.baseurl}}/assets/images/posts/ALLWAYS.jpg)
 ![canc.jpg]({{site.baseurl}}/assets/images/posts/canc.jpg)
 ![CHAIN.jpg]({{site.baseurl}}/assets/images/posts/CHAIN.jpg)
 ![eld.jpg]({{site.baseurl}}/assets/images/posts/eld.jpg)
@@ -23,3 +26,5 @@ feature: TRIX.jpg
 ![SYMMM.jpg]({{site.baseurl}}/assets/images/posts/SYMMM.jpg)
 ![this.jpg]({{site.baseurl}}/assets/images/posts/this.jpg)
 ![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
+![anfall.jpg]({{site.baseurl}}/assets/images/posts/anfall.jpg)
+
