--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -27,4 +27,5 @@ feature: TRIX.jpg
 ![this.jpg]({{site.baseurl}}/assets/images/posts/this.jpg)
 ![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
 ![anfall.jpg]({{site.baseurl}}/assets/images/posts/anfall.jpg)
+![goodfood.jpg]({{site.baseurl}}/assets/images/posts/goodfood.jpg)
 
