--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -28,4 +28,8 @@ feature: TRIX.jpg
 ![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
 ![anfall.jpg]({{site.baseurl}}/assets/images/posts/anfall.jpg)
 ![goodfood.jpg]({{site.baseurl}}/assets/images/posts/goodfood.jpg)
+![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
+![bu.jpg]({{site.baseurl}}/assets/images/posts/bu.jpg)
+![EGG.jpg]({{site.baseurl}}/assets/images/posts/EGG.jpg)
+![full-moon-still.jpg]({{site.baseurl}}/assets/images/posts/full-moon-still.jpg)
 
