--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,7 +4,6 @@ published: true
 title: OUT OF ORDER
 feature: WE CAN.jpg
 ---
-
 ![cb.jpg]({{site.baseurl}}/assets/images/posts/cb.jpg)
 ![no.jpg]({{site.baseurl}}/assets/images/posts/no.jpg)
 ![1065304669.jpg]({{site.baseurl}}/assets/images/posts/1065304669.jpg)
@@ -37,3 +36,6 @@ feature: WE CAN.jpg
 ![235288_09big.jpg]({{site.baseurl}}/assets/images/posts/235288_09big.jpg)
 ![64766966-cannibalism-people.jpg]({{site.baseurl}}/assets/images/posts/64766966-cannibalism-people.jpg)
 ![glWEBBMIRRORas.jpg]({{site.baseurl}}/assets/images/posts/glWEBBMIRRORas.jpg)
+![ENIII.jpg]({{site.baseurl}}/assets/images/posts/ENIII.jpg)
+![pang.jpg]({{site.baseurl}}/assets/images/posts/pang.jpg)
+
