--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![D7K_8090-2web.jpg]({{site.baseurl}}/assets/images/posts/D7K_8090-2web.jpg)
 ![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![exo.jpg]({{site.baseurl}}/assets/images/posts/exo.jpg)
