--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![ASTRA.jpg]({{site.baseurl}}/assets/images/posts/ASTRA.jpg)
 ![ASS.jpg]({{site.baseurl}}/assets/images/posts/ASS.jpg)
 ![DIS.jpg]({{site.baseurl}}/assets/images/posts/DIS.jpg)
 ![AS.jpg]({{site.baseurl}}/assets/images/posts/AS.jpg)
