--- a/_posts/2017-04-28-new.md
+++ b/_posts/2017-04-28-new.md
@@ -4,6 +4,7 @@ published: true
 title: new
 feature: vtt.jpg
 ---
+![cross.jpg]({{site.baseurl}}/assets/images/posts/cross.jpg)
 ![age.jpg]({{site.baseurl}}/assets/images/posts/age.jpg)
 ![ASSS.jpg]({{site.baseurl}}/assets/images/posts/ASSS.jpg)
 ![RIVER.jpg]({{site.baseurl}}/assets/images/posts/RIVER.jpg)
