--- a/_posts/2017-04-29-mix-pics.md
+++ b/_posts/2017-04-29-mix-pics.md
@@ -4,6 +4,7 @@ published: true
 title: mix-pics
 feature: TRIX.jpg
 ---
+![wall.jpg]({{site.baseurl}}/assets/images/posts/wall.jpg)
 ![TRIX.jpg]({{site.baseurl}}/assets/images/posts/TRIX.jpg)
 ![vtt.jpg]({{site.baseurl}}/assets/images/posts/vtt.jpg)
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
@@ -32,4 +33,3 @@ feature: TRIX.jpg
 ![bu.jpg]({{site.baseurl}}/assets/images/posts/bu.jpg)
 ![EGG.jpg]({{site.baseurl}}/assets/images/posts/EGG.jpg)
 ![full-moon-still.jpg]({{site.baseurl}}/assets/images/posts/full-moon-still.jpg)
-
