--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: quates
 feature: ISSIGT.jpg
 ---
+![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
 ![apar.jpg]({{site.baseurl}}/assets/images/posts/apar.jpg)
 ![ANYTHING.jpg]({{site.baseurl}}/assets/images/posts/ANYTHING.jpg)
 ![BURN.jpg]({{site.baseurl}}/assets/images/posts/BURN.jpg)
@@ -39,5 +40,3 @@ feature: ISSIGT.jpg
 ![sick.jpg]({{site.baseurl}}/assets/images/posts/sick.jpg)
 ![red (2).jpg]({{site.baseurl}}/assets/images/posts/red (2).jpg)
 ![tupppp.jpg]({{site.baseurl}}/assets/images/posts/tupppp.jpg)
-
-
