--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: quates
 feature: ISSIGT.jpg
 ---
+![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![sinmggg.jpg]({{site.baseurl}}/assets/images/posts/sinmggg.jpg)
 ![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
 ![apar.jpg]({{site.baseurl}}/assets/images/posts/apar.jpg)
