--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: quates
 feature: ISSIGT.jpg
 ---
+![fis.jpg]({{site.baseurl}}/assets/images/posts/fis.jpg)
 ![dsc09433.jpg]({{site.baseurl}}/assets/images/posts/dsc09433.jpg)
 ![sinmggg.jpg]({{site.baseurl}}/assets/images/posts/sinmggg.jpg)
 ![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
@@ -42,3 +43,9 @@ feature: ISSIGT.jpg
 ![sick.jpg]({{site.baseurl}}/assets/images/posts/sick.jpg)
 ![red (2).jpg]({{site.baseurl}}/assets/images/posts/red (2).jpg)
 ![tupppp.jpg]({{site.baseurl}}/assets/images/posts/tupppp.jpg)
+![GO.jpg]({{site.baseurl}}/assets/images/posts/GO.jpg)
+![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
+![lila (4).jpg]({{site.baseurl}}/assets/images/posts/lila (4).jpg)
+![ros.jpg]({{site.baseurl}}/assets/images/posts/ros.jpg)
+![ko.jpg]({{site.baseurl}}/assets/images/posts/ko.jpg)
+
